Fixed dropdown button colour on iOS

--- a/src/css/blocks/_dropdown-menu.css
+++ b/src/css/blocks/_dropdown-menu.css
@@ -3,6 +3,7 @@ dropdown-menu
   button {
     background: none;
     border: none;
+    color: inherit;
     text-decoration: underline;
     text-decoration-color: inherit;
     text-decoration-thickness: inherit;
